--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.1.0",
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "bcryptjs": "^2.4.3",
+    "flowbite": "^2.3.0",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
+    "negotiator": "^0.6.3",
+    "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
