--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
+    "@emailjs/browser": "^4.3.3",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@react-pdf/renderer": "^3.4.4",
     "@tailwindcss/forms": "^0.5.7",
     "bcryptjs": "^2.4.3",
     "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-pdf": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
