--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "next-share": "^0.27.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
