--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ Facebook_APP_ID=466510319171213
 Facebook_Secret=f2c54c081743f3f4a8615bdc5c663bfb
 NodeMailer_Pass=affxifuhdmxkzudc
 Nodemailer_Email=zhrear19@gmail.com
-
-
+AUTH_TRUST_HOST=true
+AUTH_URL=https://zh-kart.vercel.app
+# AUTH_URL=http://localhost:3000
